Remove names of Outreachy PLC
In order to keep the Outreachy email address from being found by bots,
we need to allow people to contact us through the web form. That means
we can't currently use the Outreachy PLC email, because we only have the
Outreachy organizers email set up as a form.

The Outreachy organizers can forward travel requests to the Outreachy
PLC or Karen, as necessary.

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -178,7 +178,7 @@ Outreachy Travel Stipend
 
 <p>Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.</p>
 
-<p>If a pre-approval is required, it needs to be requested from Outreachy's Project Leadership Committee (PLC), which currently includes Cindy Pallares, Karen Sandler, Tony Sebro, Sage Sharp, and Marina Zhurakhinskaya.  ONLY in cases that you need to book travel that doesn't comply with the policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval in an e-mail with a subject line "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".</p>
+<p>If a pre-approval is required, it needs to be requested from the Outreachy organizers. ONLY in cases that you need to book travel that doesn't comply with the policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval. The e-mail should have a subject line of "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".</p>
 
 <h1>What can the travel allowance cover?</h1>
 
