Conservancy -> [the] Software Freedom Conservancy

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -33,7 +33,7 @@ Outreachy Travel Stipend
 
 	<li>Publish your trip report on your blog.</li>
 
-	<li>Submit a <a href="{% url 'travel-stipend' %}#reimbursement">reimbursement request</a> within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Conservancy will not refund your travel.</li>
+	<li>Submit a <a href="{% url 'travel-stipend' %}#reimbursement">reimbursement request</a> within 2 weeks of the last day of travel. If you submit a reimbursement more than 90 days after the last day of your trip, Software Freedom Conservancy will not refund your travel.</li>
 </ol>
 
 <h1 id='timeframe'>When does the travel have to happen?</h1>
@@ -73,7 +73,7 @@ Outreachy Travel Stipend
 
 <h2>Can the travel stipend be used for multiple events?</h2>
 
-<p>Yes, you can use your travel stipend for multiple trips, if the first trip doesn't use up the entire $500 USD travel stipend. You can combine multiple trips in one reimbursement request. However, please submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.</p>
+<p>Yes, you can use your travel stipend for multiple trips, if the first trip doesn't use up the entire $500 USD travel stipend. You can combine multiple trips in one reimbursement request. However, please submit your reimbursement request within two weeks of the completion of the earliest trip. Note that Software Freedom Conservancy does not reimburse for trips that completed more than 90 days before the request was submitted.</p>
 
 <h1 id='events'>Event requirements</h1>
 
@@ -174,18 +174,18 @@ Outreachy Travel Stipend
 
 <h1 id='preapproval'>What types of travel need pre-approval?</h1>
 
-<p><a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Please read Conservancy's policy</a> carefully for full details on what expenses might need additional pre-approval. Conservancy's policy is the final authority on what can be covered.</p>
+<p><a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Please read the Software Freedom Conservancy's travel policy</a> carefully for full details on what expenses might need additional pre-approval. Software Freedom Conservancy's travel policy is the final authority on what can be covered.</p>
 
-<p>Do not book your travel before getting any necessary pre-approval from Outreachy and Conservancy.</p>
+<p>Do not book your travel before getting any necessary pre-approval from Outreachy and the Software Freedom Conservancy.</p>
 
-<p>If a pre-approval is required, it needs to be requested from the Outreachy organizers. ONLY in cases that you need to book travel that doesn't comply with the policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval. The e-mail should have a subject line of "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".</p>
+<p>If a pre-approval is required, it needs to be requested from the Outreachy organizers. ONLY in cases that you need to book travel that doesn't comply with the Software Freedom Conservancy's travel policy, <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for a pre-approval. The e-mail should have a subject line of "[Round Year]-[Round Start Month]: [Your Last Name]: Travel pre-approval needed". For example, if you participated in the round of Outreachy that started in May 2016 and your last name is Smith, you would use the following subject: "2016-05: Smith: Travel pre-approval needed".</p>
 
 <h1>What can the travel stipend cover?</h1>
 
-<p>Generally, the travel stipend can cover expenses like transportation, lodging, visa fees, event attendance fees, and meals. <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Read Conservancy's travel policy</a> carefully for full details. You can use your travel stipend to go to an office of the community you are working with, an event where other contributors from your community will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
+<p>Generally, the travel stipend can cover expenses like transportation, lodging, visa fees, event attendance fees, and meals. <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Read the Software Freedom Conservancy's travel policy</a> carefully for full details. You can use your travel stipend to go to an office of the community you are working with, an event where other contributors from your community will be present, a place where you can work with your mentor in person, an event where you will present about your project, or any generally themed FOSS event.</p>
 
 <h2 id='airfare'>Airfare</h2>
-<p>For air travel, please be sure to comply with Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for Conservancy to do an airfare reimbursement.</p>
+<p>For air travel, please be sure to comply with Software Freedom Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for the Software Freedom Conservancy to do an airfare reimbursement.</p>
 
 <h2 id='receipts'>Saving receipts</h2>
 
@@ -199,11 +199,11 @@ Outreachy Travel Stipend
 
 <p>Each event will have a different travel policy than the Software Freedom Conservancy travel policy. You may need to provide additional documentation (such as meal receipts). Some events may not require you to write a blog post about the event. Please check with the event organizer for what documentation is needed for their travel reimbursements.</p>
 
-<h1 id='reimbursement'>How do I get reimbursed for the travel stipend by Conservancy?</h1>
+<h1 id='reimbursement'>How do I get reimbursed for the travel stipend by the Software Freedom Conservancy?</h1>
 
-<p>Unless you were told otherwise, Conservancy is the organization that will reimburse your travel. </p>
+<p>Unless you were told otherwise, Software Freedom Conservancy is the organization that will reimburse your travel. </p>
 
-<p>Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Conservancy to create such ticket for you.</p>
+<p>Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by the Software Freedom Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Software Freedom Conservancy to create such ticket for you.</p>
 
 <p>The email body should be in the following form:</p>
 <pre>
@@ -230,7 +230,7 @@ I have not included receipts for things that fall under the Meals and Incidental
 [INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
 </pre>
 
-<p>Within 30 days of your e-mail, Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
+<p>Within 30 days of your e-mail, Software Freedom Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
 
 <h1>How do I get reimbursed for the travel stipend by my community?</h1>
 
