Wordsmith types of travel covered

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -182,10 +182,10 @@ Outreachy Travel Stipend
 
 <h1>What can the travel stipend cover?</h1>
 
-<p>The travel stipend can usually cover expenses like transportation, lodging, visa fees, event attendance fees, and meals. <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Read the Software Freedom Conservancy's travel policy</a> carefully for details.</p>
+<p>The travel stipend can usually cover expenses like transportation, lodging, visa fees, event attendance fees, and meals. <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html">Read the Software Freedom Conservancy's travel policy</a> carefully for details. <a href="{% url 'travel-stipend' %}#preapproval">Some expenses may need to be pre-approved</a> if they aren't within the Software Freedom Conservancy's travel policy guidelines.</p>
 
 <h2 id='airfare'>Airfare</h2>
-<p>For air travel, please be sure to comply with Software Freedom Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> and be sure to save a screenshot or "print to file" version of your airfare search on a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. Such low fare documentation is <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">required</a> for the Software Freedom Conservancy to do an airfare reimbursement.</p>
+<p>For air travel, Software Freedom Conservancy's <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">low fare policy</a> requires you to save a screenshot of your airfare search. The airfare search must be done with a widely-recognized airfare comparison site, such as <a href="http://orbitz.com">Orbitz</a>, <a href="http://kayak.com">Kayak</a> or <a href="http://hipmunk.com/">Hipmunk</a>. An airfare search from a particular airline's website is not allowed. You must use a flight comparison site. Complying with the <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">Complying with the low-fare policy and saving an airfare screenshot is required</a> for the Software Freedom Conservancy reimburse your airfare.</p>
 
 <h2 id='receipts'>Saving receipts</h2>
 
