Reference Conservancy travel policy for receipts section

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -190,7 +190,7 @@ Outreachy Travel Stipend
 
 <h3 id='receipts'>Saving receipts</h3>
 
-<p>You will need to save the receipts for travel to get to your destination, for hotel, and for conference registration. Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses">Meals and Incidental Expenses per diem amount</a></p>
+<p>You will need to save the receipts for most travel expenses. <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#low-fare">Read the Software Freedom Conservancy's travel policy for details.</a> Note that you won't need to provide receipts for meals and other incidental expenses like local transportation that are part of the <a href="https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses">Meals and Incidental Expenses per diem amount</a></p>
 
 <h1 id='scholarships'>What if my expenses are over $500?</h1>
 
