Clarify the event scholarship and reduced admission fee sections

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -194,11 +194,19 @@ Outreachy Travel Stipend
 
 <h1 id='scholarships'>What if my expenses are over $500?</h1>
 
-<a href="https://openhatch.org/wiki/Opportunities/Travel_Grants">Many conferences offer scholarships and reduced or waived admission fees</a> for low-income participants or diversity scholarships. Please investigate and use these in addition to relying on the travel stipend. Outreachy will not cover more than $500.
+<p><br>Outreachy will not reimburse more than $500 USD.</b></p>
 
-<p>If you wish to use scholarships or travel funding, most events require you to apply several months before the conference. Outreachy is not involved in travel funding for any particular conference or event, so you will need to work with the event organizer to submit a travel funding application. If in doubt, email the event organizers and ask when the deadline for submitting travel funding requests is.</p>
+<p>There are ways you can reduce your travel costs. <a href="https://openhatch.org/wiki/Opportunities/Travel_Grants">Many conferences offer scholarships and reduced or waived admission fees</a> for low-income participants or diversity scholarships. Please use these in addition to relying on the travel stipend.</p>
+
+<p>If you wish to use event scholarships, most events require you to apply several months before the conference. Outreachy is not involved in travel funding for any particular conference or event, so you will need to work with the event organizer to submit a travel funding application. If in doubt, email the event organizers and ask when the deadline for submitting travel funding requests is.</p>
+
+<p>If you wish to use reduced admission fees, how you use them will vary from conference to conference. Some conferences allow you to select reduced admission when you register for the coference. For other conferences, you may need to contact the event organizers to receive a registration code for reduced admission fees. There may be deadline for asking for reduced admission. If in doubt, email the event organizers and ask when the deadline for requesting a reduced admission fee is.</p>
+
+<h3>How do I get reimbursed for event travel scholarships?</h3>
 
 <p>Each event will have a different travel policy than the Software Freedom Conservancy travel policy. You may need to provide additional documentation (such as meal receipts). Some events may not require you to write a blog post about the event. Please check with the event organizer for what documentation is needed for their travel reimbursements.</p>
+
+<p>If a participating community has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the community will be the custodian of your travel stipend, and you will be notified about it. You will need to follow the reimbursement procedures of that community, and should ask your mentor or coordinator to let you know what they are.</p>
 
 <h1 id='reimbursement'>How do I get reimbursed for the travel stipend by the Software Freedom Conservancy?</h1>
 
@@ -232,9 +240,5 @@ I have not included receipts for things that fall under the Meals and Incidental
 </pre>
 
 <p>Within 30 days of your e-mail, Software Freedom Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
-
-<h1>How do I get reimbursed for the travel stipend by my community?</h1>
-
-<p>If a participating community has a process for reimbursing travelling expenses of its contributors, it might choose to do so itself for its Outreachy interns. In that case the community will be the custodian of your travel stipend, and you will be notified about it. You will need to follow the reimbursement procedures of that community, and should ask your mentor or coordinator to let you know what they are.</p>
 
 {% endblock %}
