Travel stipend: formatting for email template

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -215,29 +215,29 @@ Outreachy Travel Stipend
 <p>Around the time that their second internship payment is sent, each intern receives an e-mail with a ticket number they can use to request reimbursement for their travel stipend. The e-mail has the intern's round, name, and the phrase "travel reimbursement request" in its subject line. Interns should reply to that email, including their project mentor on Cc, with their reimbursement request. Once the email is received by the Software Freedom Conservancy's request ticket system, it will automatically send an email to the Outreachy organizers. If you are ready to request your reimbursement early in your internship round, before the ticket is created for you, you can <a href="https://www.outreachy.org/contact/contact-us/">contact Outreachy organizers</a> for us to ask Software Freedom Conservancy to create such ticket for you.</p>
 
 <p>The email body should be in the following form:</p>
-<pre>
-Greetings,
+<div class="container">
+	<p>Greetings,</p>
 
-I traveled to $CONFERENCE during $START-DATE to $END-DATE. My mentor on $PROJECT-NAME is Cc'ed and, in a prior discussion, has approved this travel for me as relevant.
+	<p>I traveled to $CONFERENCE during $START-DATE to $END-DATE. My mentor on $PROJECT-NAME is Cc'ed and, in a prior discussion, has approved this travel for me as relevant.</p>
 
-My trip blog post can be found at: $URL
+	<p>My trip blog post can be found at: $URL</p>
 
-I'm requesting reimbursement for $TOTAL, which is broken down into:
+	<p>I'm requesting reimbursement for $TOTAL, which is broken down into:</p>
 
-Flight: $
-Per diem: $
-Conference Fee: $
-...
+	<p>Flight: $<br>
+	Per diem: $<br>
+	Conference Fee: $<br>
+	...</p>
 
-The following receipts are attached for my reimbursement:
+	<p>The following receipts are attached for my reimbursement:</p>
 
-file1 - airfare search screenshot
-file2 - ...
+	<p>file1 - airfare search screenshot<br>
+	file2 - ...</p>
 
-I have not included receipts for things that fall under the Meals and Incidental Expenses per diem amount described on https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses
+	<p>I have not included receipts for things that fall under the Meals and Incidental Expenses per diem amount described on https://sfconservancy.org/projects/policies/conservancy-travel-policy.html#meals-and-incidental-expenses</p>
 
-[INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
-</pre>
+	<p>[INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
+</div>
 
 <p>Within 30 days of your e-mail, Software Freedom Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
 
