Don't promise reimbursement within a month.

--- a/home/templates/home/travel_stipend.html
+++ b/home/templates/home/travel_stipend.html
@@ -239,6 +239,6 @@ Outreachy Travel Stipend
 	<p>[INCLUDE PAYMENT INFORMATION OR WHETHER IT IS OK TO USE THE SAME PAYMENT INFORMATION FROM YOUR INTERNSHIP PAYMENTS.]
 </div>
 
-<p>Within 30 days of your e-mail, Software Freedom Conservancy will send you the reimbursement or inform you if it requires additional information.</p>
+<p>Within 30 days of your e-mail, Software Freedom Conservancy will notify you if they will reimburse you or if they need to ask for additional information.</p>
 
 {% endblock %}
